# mem_allocator

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  conanfile.py
profiles/: linux-clang18-build-arm  linux-clang18-host-arm  linux-gcc13-build-arm  linux-gcc13-host-arm
src/pmr_allocators/: CMakeLists.txt  per_thread_allocator.cpp  per_thread_allocator.h
src/preload/: CMakeLists.txt  preload.cpp
tests/: CMakeLists.txt  test_allocator_perf.cpp  test_per_thread_allocator.cpp
